--- a/02.cpu-cluster-demo.ipynb
+++ b/02.cpu-cluster-demo.ipynb
@@ -39,10 +39,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    run = Run.get_context()\n",
-    "except:\n",
-    "    print('Not in a run -- follow link from the cluster widget')"
+    "run = Run.get_context()\n",
+    "run"
    ]
   },
   {
@@ -196,11 +194,7 @@
     }
    ],
    "source": [
-    "try:\n",
-    "    run = Run.get_context()\n",
-    "except:\n",
-    "    print('Not in a run -- follow link from the cluster widget')\n",
-    "    \n",
+    "run = Run.get_context()\n",
     "run"
    ]
   },
